--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2024"
 [dependencies]
 actix-web = "4"
 serde_json = "1.0.142"
+serde = { version = "1.0.137", features = ["derive"] }
+futures = "0.3.14"
