--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ actix-web = "4"
 serde_json = "1.0.142"
 serde = { version = "1.0.137", features = ["derive"] }
 futures = "0.3.14"
+tokio = { version = "1.24.2" }
