chore: Initialize task 2

--- a/task__2/Cargo.toml
+++ b/task__2/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+deadpool-postgres = { version = "0.12", features = ["serde"] }
+tokio-postgres = "0.7.6"
+postgres = { version = "0.19.7", features = ["with-chrono-0_4"] }
