--- a/task__2/Cargo.toml
+++ b/task__2/Cargo.toml
@@ -4,6 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+config = "0.13"
 deadpool-postgres = { version = "0.12", features = ["serde"] }
-tokio-postgres = "0.7.6"
+dotenvy = "0.15"
 postgres = { version = "0.19.7", features = ["with-chrono-0_4"] }
+serde = { version = "1.0.137", features = ["derive"] }
+tokio = { version = "1.24.2", features = ["full"] }
+tokio-postgres = "0.7.6"
+uuid = { version = "1", features = ["v4"] }
