--- a/task__1/Cargo.toml
+++ b/task__1/Cargo.toml
@@ -5,7 +5,8 @@ edition = "2024"
 
 [dependencies]
 actix-web = "4"
-serde_json = "1.0.142"
-serde = { version = "1.0.137", features = ["derive"] }
 futures = "0.3.14"
+rusty-termcolor = "0.1.62"
+serde = { version = "1.0.137", features = ["derive"] }
+serde_json = "1.0.142"
 tokio = { version = "1.24.2" }
